--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -884,6 +884,13 @@
 			}
 		} 
 	} 
+
+	.toolkit-page{
+		div.panels-flexible-region.panels-flexible-region-6-center.panels-flexible-region-last.key-content.col-md-9.col-sm-12{
+			padding-left: 15px;
+			padding-right: 15px;
+		}
+	}
 }
 
 
