MDR-4340  - Tablet - Previous Campaigns lateral menu is displaced.

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8332,6 +8332,9 @@ html:lang(de) .left-menu.accordion-menu {
   padding-left: 0;
   padding-right: 0;
 }
+#block-menu-block-5 {
+  float: left;
+}
 #block-menu-block-5 > div > ul li.last.expanded {
   margin-top: 1em;
 }
