MHWC20-14 - HWC: General Sticky menu - not correctly displayed

--- a/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter-responsive.css
+++ b/docroot/sites/all/modules/osha/osha_newsletter/includes/css/newsletter-responsive.css
@@ -103,7 +103,7 @@ a[x-apple-data-detectors] {
     float: left;
   }
 
-  img {
+  .newsletter-container img {
     max-width: 100% !important;
     width: auto;
     height: auto !important;
