--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -10296,3 +10296,10 @@ body.page-node-253{
 #block-views-infographic-block-1{
 	padding-bottom: 1em;
 }
+
+/*MDR-4355 - GPE Platform: include an space between the summary and the list of items*/
+.logged-in.page-good-practice-exchange-platform{
+	.views-field-field-document-files{
+		padding-top: 1rem;
+	}
+}
