--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9648,6 +9648,7 @@ html:lang(de){
 }
 
 #block-menu-block-5 {
+	float: left;
 	> div {
 		> ul{
 			li.last.expanded{
@@ -10294,4 +10295,11 @@ body.page-node-253{
 
 #block-views-infographic-block-1{
 	padding-bottom: 1em;
+}
+
+/*MDR-4355 - GPE Platform: include an space between the summary and the list of items*/
+.logged-in.page-good-practice-exchange-platform{
+	.views-field-field-document-files{
+		padding-top: 1rem;
+	}
 }
