--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1700,6 +1700,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
     	align-items: center;
     	justify-content: center;
    	 	padding-bottom: 20px;
+   	 	em{
+   	 		padding-right: 15px;
+   	 	}
 	}
 }
 
@@ -9645,6 +9648,7 @@ html:lang(de){
 }
 
 #block-menu-block-5 {
+	float: left;
 	> div {
 		> ul{
 			li.last.expanded{
@@ -10291,4 +10295,11 @@ body.page-node-253{
 
 #block-views-infographic-block-1{
 	padding-bottom: 1em;
+}
+
+/*MDR-4355 - GPE Platform: include an space between the summary and the list of items*/
+.logged-in.page-good-practice-exchange-platform{
+	.views-field-field-document-files{
+		padding-top: 1rem;
+	}
 }
