MDR-4440 - Development - Display all priority areas and disable the non available ones

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9843,6 +9843,10 @@ body.front-page{
 							border-radius: 7px;
 	    				}
 
+	    				h3{
+	    					font-size: 1.7rem;
+	    				}
+
 	    				a{
 	    					font-weight: 600;
 	    					font-size: 1.8rem;
