--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8529,6 +8529,9 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priorit
   border: 2px solid #bcd75b;
   border-radius: 7px;
 }
+body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priority_area ul li h3 {
+  font-size: 1.7rem;
+}
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priority_area ul li a {
   font-size: 1.8rem;
   font-weight: 600;
