MDR-4440 - Development - Display all priority areas and disable the non available ones

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8531,6 +8531,7 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priorit
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priority_area ul li h3 {
   font-size: 1.7rem;
+  margin-top: 10px;
 }
 body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priority_area ul li a {
   font-size: 1.8rem;
