--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -253,7 +253,7 @@
 			#block-hwc-homepage-hwc-homepage-topics{
 				.priority_area{
 					ul{
-					    li:nth-child(4){
+					    li:nth-child(4), li:nth-child(8) {
 					    	margin-right: 2em;
 					    }
 					}
